Modified Roblox's animate script to allow replication and saving of state, change CharacterState class animation state implementations to support animate API.

--- a/default.project.json
+++ b/default.project.json
@@ -7,6 +7,14 @@
     "ReplicatedStorage":{
       "$className": "ReplicatedStorage",
       "$path": "src/ReplicatedStorage"
+    },
+    "StarterPlayer": {
+      "$className": "StarterPlayer",
+      "$path": "src/StarterPlayer",
+      "StarterCharacterScripts": {
+        "$className": "StarterCharacterScripts",
+        "$path": "src/StarterPlayer/StarterCharacterScripts"
+      }
     }
   }
 }
